src/app/home/home.component.scss
@use '../shared/styles/screen-sizes';
@use '../shared/styles/colors';


mat-sidenav-container {
  width: 100%;
  height: 100%;

  mat-sidenav {
    display: flex;
    align-items: center;
    width: 240px;
  }
  mat-sidenav-content {
    background-color: white;

    app-header {
      position: fixed;
      width: 100%;
      z-index: 1;
      margin-bottom: 50%;
    }
    .router-outlet {
      width: 100%;
      $header-height: 60px;
      $bottom-nav-height: 40px;
      padding-top: $header-height;
      padding-bottom: $bottom-nav-height;
      padding-left: 5%;
      padding-right: 5%;
      height: 100%;
      overflow: auto;
    }
    app-bottom-nav {
      display: flex;
      position: fixed;
      align-items: center;
      bottom: 0px;
      width: 100%;
    }
  }
}


@media only screen and (min-width: #{screen-sizes.$small-desktop-width}) {
  mat-sidenav-container {
    mat-sidenav {
      width: 270px;
    }
    mat-sidenav-content {
      .router-outlet {
        width: 100%;
        padding-left: 20px;
        padding-right: 20px;
      }
    }
  }
}

